<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.sebe.ikasse.BedienungActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:id="@+id/tvAnmelden"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="Bitte melde dich als Bedienung an:" />

        <LinearLayout
            android:id="@+id/linBedienung_anmelden"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvAnmelden"
            android:layout_marginTop="50dp"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/etBedienung_anmelden_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/benutzername" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/etBedienung_anmelden_Passwort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/passwort"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btBedienung_anmelden"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="bedienung_anmelden"
                android:text="@string/anmelden"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvBedienung_anmelden_nio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/linBedienung_anmelden"
            android:layout_marginTop="10dp"
            android:text="@string/anmeldung_nio"
            android:textColor="#800"
            android:visibility="gone" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relBedienung_anmelden_warten"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#7000"
        android:clickable="true"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical" >

            <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/tvBedienung_anmelden_warten"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/anmeldung_erfolgt"
                android:textColor="#fff"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>