<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.sebe.ikasse.MainActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/willkommen"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btMainBedienung"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:onClick="main_Bedienung"
                android:text="@string/bedienung"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100" >

                <Button
                    android:id="@+id/btMainKasse"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:onClick="main_Kasse"
                    android:text="@string/kasse" />

                <Button
                    android:id="@+id/btMainServer"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:onClick="main_Server"
                    android:text="@string/server" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="Version 0.2.3 vom 27.09.2016" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relMainPasswortServer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#b000"
        android:clickable="true"
        android:visibility="gone" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="#fff"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <TextView
                android:id="@+id/tvMainPasswortServereingeben"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Gebe das Passwort für den Server ein:"
                android:textSize="15dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etMainPasswortServer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvMainPasswortServereingeben"
                android:layout_marginTop="10dp"
                android:inputType="textPassword" >

                <requestFocus />
            </EditText>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etMainPasswortServer"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btMainPasswortServerAbbrechen"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:onClick="btMainPasswortServerAbbrechen"
                    android:text="@string/abbrechen" />

                <Button
                    android:id="@+id/btMainPasswortServerFortfahren"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:onClick="btMainPasswortServerFortfahren"
                    android:text="Fortfahren"
                    android:textStyle="bold" />
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relMainPasswortKasse"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#b000"
        android:clickable="true"
        android:visibility="gone" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="#fff"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <TextView
                android:id="@+id/tvMainPasswortKasseeingeben"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Passwort"
                android:text="Gebe das Passwort für die Kasse ein:"
                android:textSize="15dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etMainPasswortKasse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvMainPasswortKasseeingeben"
                android:layout_marginTop="10dp"
                android:hint="Passwort"
                android:inputType="textPassword" >

                <requestFocus />
            </EditText>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etMainPasswortKasse"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btMainPasswortKasseAbbrechen"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:onClick="btMainPasswortKasseAbbrechen"
                    android:text="@string/abbrechen" />

                <Button
                    android:id="@+id/btMainPasswortKasseFortfahren"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:onClick="btMainPasswortKasseFortfahren"
                    android:text="Fortfahren"
                    android:textStyle="bold" />
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>